--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
   mongo:
     ports:
       - '27017:27017'
-    container_name: digitro-mongo
+    container_name: medcof-mongo
     restart: always
     logging:
       options:
@@ -13,36 +13,3 @@ services:
       - MONGO_INITDB_ROOT_USERNAME=admin
       - MONGO_INITDB_ROOT_PASSWORD=admin
     image: mongo
-
-  redis:
-    container_name: redis
-    image: redis
-    # command: redis-server --requirepass X123456X
-    ports:
-      - '6379:6379'
-    networks:
-      - todo-networks
-
-  mq.todo.local:
-    container_name: mq.todo.local
-    image: rabbitmq:3.8.6-management-alpine
-    ports:
-      - 5672:5672
-      - 15672:15672
-    environment:
-      - RABBITMQ_DEFAULT_USER=todo
-      - RABBITMQ_DEFAULT_PASS=todo
-    healthcheck:
-      test: rabbitmq-diagnostics ping -q
-      interval: 15s
-      timeout: 5s
-      retries: 5
-    networks:
-      - todo-networks
-    deploy:
-      resources:
-        limits:
-          memory: 2GB
-networks:
-  todo-networks:
-    driver: bridge
