--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 NODE_ENV=dev
 PORT=3333
 DATABASE_CONNECTION=mongodb://admin:admin@localhost:27017/admin
+JWT_ACCESS_SECRET=1a25293f
+JWT_REFRESH_SECRET=1a25293f
