create register router

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 NODE_ENV=dev
 PORT=3333
-DATABASE_CONNECTION=mongodb://admin:admin@localhost:27017/admin
+DATABASE_CONNECTION=mongodb+srv://mamutinho:O9uwGaAYvjMfiwps@cluster0.goyha9j.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_ACCESS_SECRET=1a25293f
 JWT_REFRESH_SECRET=1a25293f
