--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,9 @@ env:
   ECS_SERVICE: my-nestjs-service
   ECS_TASK_DEFINITION: my-nestjs-task
   ECR_REPOSITORY_NAME: nestjs-app-repo
+  CONTAINER_NAME: nestjs-app
+  SUBNET_ID: subnet-XXXXXX  # Substitua pelos IDs de sub-rede corretos
+  SECURITY_GROUP_ID: sg-XXXXXX  # Substitua pelo ID do security group correto
 
 jobs:
   build-and-deploy:
@@ -78,7 +81,7 @@ jobs:
         TASK_DEFINITION=$(aws ecs describe-task-definition --region $AWS_REGION --task-definition $ECS_TASK_DEFINITION 2>/dev/null || echo "")
         if [ -z "$TASK_DEFINITION" ]; then
           echo "Registering new task definition"
-          NEW_TASK_DEFINITION=$(echo '{}' | jq --arg IMAGE "${{ env.ECR_URI }}:$IMAGE_TAG" --arg FAMILY $ECS_TASK_DEFINITION --argjson MEMORY 1024 --argjson CPU 512 '.family=$FAMILY | .containerDefinitions=[{"name":"nestjs-app","image":$IMAGE,"essential":true,"memory":$MEMORY,"cpu":$CPU,"portMappings":[{"containerPort":3333,"hostPort":3333}]}] | .networkMode="awsvpc" | .requiresCompatibilities=["FARGATE"] | .cpu="512" | .memory="1024"')
+          NEW_TASK_DEFINITION=$(echo '{}' | jq --arg IMAGE "${{ env.ECR_URI }}:$IMAGE_TAG" --arg FAMILY $ECS_TASK_DEFINITION --argjson MEMORY 1024 --argjson CPU 512 '.family=$FAMILY | .containerDefinitions=[{"name":"${{ env.CONTAINER_NAME }}","image":$IMAGE,"essential":true,"memory":$MEMORY,"cpu":$CPU,"portMappings":[{"containerPort":3333,"hostPort":3333}]}] | .networkMode="awsvpc" | .requiresCompatibilities=["FARGATE"] | .cpu="512" | .memory="1024"')
           aws ecs register-task-definition --region $AWS_REGION --cli-input-json "$NEW_TASK_DEFINITION"
         else
           echo "Updating existing task definition"
@@ -94,6 +97,16 @@ jobs:
           NEW_TASK_DEFINITION=$(echo '{}' | jq --arg IMAGE "${{ env.ECR_URI }}:$IMAGE_TAG" --arg FAMILY "$FAMILY" --argjson CONTAINER_DEFINITIONS "$CONTAINER_DEFINITIONS" --arg NETWORK_MODE "$NETWORK_MODE" --arg TASK_ROLE_ARN "$TASK_ROLE_ARN" --arg EXECUTION_ROLE_ARN "$EXECUTION_ROLE_ARN" --argjson REQUIRES_COMPATIBILITIES "$REQUIRES_COMPATIBILITIES" --arg CPU "$CPU" --arg MEMORY "$MEMORY" '.family=$FAMILY | .containerDefinitions=$CONTAINER_DEFINITIONS | .containerDefinitions[0].image=$IMAGE | .networkMode=$NETWORK_MODE | .taskRoleArn=$TASK_ROLE_ARN | .executionRoleArn=$EXECUTION_ROLE_ARN | .requiresCompatibilities=$REQUIRES_COMPATIBILITIES | .cpu=$CPU | .memory=$MEMORY')
 
           aws ecs register-task-definition --region $AWS_REGION --cli-input-json "$NEW_TASK_DEFINITION"
+        fi
+
+    - name: Ensure ECS service exists
+      run: |
+        SERVICE=$(aws ecs describe-services --cluster $ECS_CLUSTER --services $ECS_SERVICE --region $AWS_REGION --query 'services[0].serviceArn' --output text 2>/dev/null)
+        if [ "$SERVICE" == "None" ]; then
+          echo "Service not found. Creating service $ECS_SERVICE"
+          aws ecs create-service --cluster $ECS_CLUSTER --service-name $ECS_SERVICE --task-definition $ECS_TASK_DEFINITION --desired-count 1 --launch-type FARGATE --network-configuration "awsvpcConfiguration={subnets=[${{ env.SUBNET_ID }}],securityGroups=[${{ env.SECURITY_GROUP_ID }}],assignPublicIp=ENABLED}" --region $AWS_REGION
+        else
+          echo "Service $ECS_SERVICE exists."
         fi
 
     - name: Update ECS service with new image
