project image tag

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,21 +1,20 @@
-name: Deploy to ECS
+name: Deploy to AWS ECS
 
 on:
   push:
     branches:
       - main
 
-env:
-  AWS_REGION: sa-east-1
-  ECS_CLUSTER: my-nestjs-cluster
-  ECS_SERVICE: my-nestjs-service
-  ECS_TASK_DEFINITION: my-nestjs-task
-  ECR_REPOSITORY_NAME: nestjs-app-repo
-  CONTAINER_NAME: nestjs-app
-
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
+
+    env:
+      AWS_REGION: sa-east-1
+      ECR_REPOSITORY: my-app-repo
+      ECS_CLUSTER: main-ecs-cluster
+      ECS_SERVICE: app-service
+      IMAGE_TAG: ${{ github.sha }}
 
     steps:
     - name: Checkout code
@@ -26,107 +25,35 @@ jobs:
       with:
         node-version: '18'
 
-    - name: Install dependencies
-      run: npm install
-
-    - name: Build application
-      run: npm run build
-
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: sa-east-1
-
-    - name: Run Terraform to get Security Group ID
-      run: |
-        cd infra # Diretório onde o código Terraform está localizado
-        terraform init
-        terraform apply -auto-approve
-        SECURITY_GROUP_ID=$(terraform output -raw security_group_id)
-        echo "SECURITY_GROUP_ID=$SECURITY_GROUP_ID" >> $GITHUB_ENV
-
-    - name: Ensure ECR repository exists
-      run: |
-        aws ecr describe-repositories --repository-names ${{ env.ECR_REPOSITORY_NAME }} --region $AWS_REGION || \
-        aws ecr create-repository --repository-name ${{ env.ECR_REPOSITORY_NAME }} --region $AWS_REGION || \
-        echo "ECR repository exists or was created successfully."
-      id: ecr
-
-    - name: Get ECR URI
-      run: echo "ECR_URI=$(aws ecr describe-repositories --repository-names ${{ env.ECR_REPOSITORY_NAME }} --region $AWS_REGION --query 'repositories[0].repositoryUri' --output text)" >> $GITHUB_ENV
-
     - name: Log in to Amazon ECR
-      run: aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin ${{ env.ECR_URI }}
-
-    - name: Create .env file
       run: |
-        echo "DB_URI=${{ secrets.DB_URI }}" >> .env
-        echo "JWT_ACCESS_SECRET=${{ secrets.JWT_ACCESS_SECRET }}" >> .env
-        echo "JWT_REFRESH_SECRET=${{ secrets.JWT_REFRESH_SECRET }}" >> .env
+        aws ecr get-login-password --region ${{ env.AWS_REGION }} | docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com
 
-    - name: Build, tag, and push image to Amazon ECR
+    - name: Build Docker image
       run: |
-        IMAGE_TAG=$(echo $GITHUB_SHA | cut -c1-7)
-        docker build -t ${{ env.ECR_URI }}:$IMAGE_TAG .
-        docker push ${{ env.ECR_URI }}:$IMAGE_TAG
+        docker build -t ${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }} .
 
-    - name: Ensure ECS cluster exists
+    - name: Tag Docker image
       run: |
-        CLUSTER=$(aws ecs describe-clusters --clusters $ECS_CLUSTER --region $AWS_REGION --query 'clusters[0].clusterArn' --output text 2>/dev/null)
-        if [ "$CLUSTER" == "None" ]; then
-          echo "Cluster not found. Creating cluster $ECS_CLUSTER"
-          aws ecs create-cluster --cluster-name $ECS_CLUSTER --region $AWS_REGION
-        else
-          echo "Cluster $ECS_CLUSTER exists."
-        fi
+        docker tag ${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }} ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
 
-    - name: Register or update ECS task definition
+    - name: Push Docker image to ECR
       run: |
-        TASK_DEFINITION=$(aws ecs describe-task-definition --region $AWS_REGION --task-definition $ECS_TASK_DEFINITION 2>/dev/null || echo "")
-        if [ -z "$TASK_DEFINITION" ]; then
-          echo "Registering new task definition"
-          NEW_TASK_DEFINITION=$(echo '{}' | jq --arg IMAGE "${{ env.ECR_URI }}:$IMAGE_TAG" --arg FAMILY $ECS_TASK_DEFINITION --argjson MEMORY 1024 --argjson CPU 512 '.family=$FAMILY | .containerDefinitions=[{"name":"${{ env.CONTAINER_NAME }}","image":$IMAGE,"essential":true,"memory":$MEMORY,"cpu":$CPU,"portMappings":[{"containerPort":3333,"hostPort":3333}]}] | .networkMode="awsvpc" | .requiresCompatibilities=["FARGATE"] | .cpu="512" | .memory="1024"')
-          aws ecs register-task-definition --region $AWS_REGION --cli-input-json "$NEW_TASK_DEFINITION"
-        else
-          echo "Updating existing task definition"
-          FAMILY=$(echo $TASK_DEFINITION | jq -r '.taskDefinition.family')
-          CONTAINER_DEFINITIONS=$(echo $TASK_DEFINITION | jq -c '.taskDefinition.containerDefinitions')
-          NETWORK_MODE=$(echo $TASK_DEFINITION | jq -r '.taskDefinition.networkMode // "awsvpc"')
-          TASK_ROLE_ARN=$(echo $TASK_DEFINITION | jq -r '.taskDefinition.taskRoleArn')
-          EXECUTION_ROLE_ARN=$(echo $TASK_DEFINITION | jq -r '.taskDefinition.executionRoleArn')
-          REQUIRES_COMPATIBILITIES=$(echo $TASK_DEFINITION | jq -c '.taskDefinition.requiresCompatibilities // ["FARGATE"]')
-          CPU=$(echo $TASK_DEFINITION | jq -r '.taskDefinition.cpu // "512"')
-          MEMORY=$(echo $TASK_DEFINITION | jq -r '.taskDefinition.memory // "1024"')
+        docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
 
-          NEW_TASK_DEFINITION=$(echo '{}' | jq --arg IMAGE "${{ env.ECR_URI }}:$IMAGE_TAG" --arg FAMILY "$FAMILY" --argjson CONTAINER_DEFINITIONS "$CONTAINER_DEFINITIONS" --arg NETWORK_MODE "$NETWORK_MODE" --arg TASK_ROLE_ARN "$TASK_ROLE_ARN" --arg EXECUTION_ROLE_ARN "$EXECUTION_ROLE_ARN" --argjson REQUIRES_COMPATIBILITIES "$REQUIRES_COMPATIBILITIES" --arg CPU "$CPU" --arg MEMORY "$MEMORY" '.family=$FAMILY | .containerDefinitions=$CONTAINER_DEFINITIONS | .containerDefinitions[0].image=$IMAGE | .networkMode=$NETWORK_MODE | .taskRoleArn=$TASK_ROLE_ARN | .executionRoleArn=$EXECUTION_ROLE_ARN | .requiresCompatibilities=$REQUIRES_COMPATIBILITIES | .cpu=$CPU | .memory=$MEMORY')
+    - name: Set up Terraform v1.9.5
+      uses: hashicorp/setup-terraform@v1
+      with:
+        terraform_version: 1.9.5
 
-          aws ecs register-task-definition --region $AWS_REGION --cli-input-json "$NEW_TASK_DEFINITION"
-        fi
+    - name: Terraform Init
+      run: terraform init
+      working-directory: ./terraform
 
-    - name: Retrieve Subnet IDs
+    - name: Terraform Apply
+      run: terraform apply -auto-approve -var "image_tag=${{ env.IMAGE_TAG }}"
+      working-directory: ./terraform
+
+    - name: Deploy to ECS
       run: |
-        SUBNET_IDS=$(aws ec2 describe-subnets --region $AWS_REGION --query 'Subnets[*].SubnetId' --output text)
-        if [ -z "$SUBNET_IDS" ]; then
-          echo "No subnets found in region $AWS_REGION"
-          exit 1
-        else
-          SUBNET_IDS=$(echo $SUBNET_IDS | tr ' ' ',')
-          echo "SUBNET_IDS=$SUBNET_IDS" >> $GITHUB_ENV
-        fi
-
-    - name: Ensure ECS service exists
-      run: |
-        SERVICE=$(aws ecs describe-services --cluster $ECS_CLUSTER --services $ECS_SERVICE --region $AWS_REGION --query 'services[0].serviceArn' --output text 2>/dev/null)
-        if [ "$SERVICE" == "None" ]; then
-          echo "Service not found. Creating service $ECS_SERVICE"
-          aws ecs create-service --cluster $ECS_CLUSTER --service-name $ECS_SERVICE --task-definition $ECS_TASK_DEFINITION --desired-count 1 --launch-type FARGATE --network-configuration "awsvpcConfiguration={subnets=[${{ env.SUBNET_IDS }}],securityGroups=[${{ env.SECURITY_GROUP_ID }}],assignPublicIp=ENABLED}" --region $AWS_REGION
-        else
-          echo "Service $ECS_SERVICE exists."
-        fi
-
-    - name: Update ECS service with new image
-      run: |
-        IMAGE_TAG=$(echo $GITHUB_SHA | cut -c1-7)
-        aws ecs update-service --cluster $ECS_CLUSTER --service $ECS_SERVICE --force-new-deployment
+        aws ecs update-service --cluster ${{ env.ECS_CLUSTER }} --service ${{ env.ECS_SERVICE }} --force-new-deployment
