--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,11 +27,23 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ env.AWS_REGION }}
 
+    - name: Set up Terraform v1.9.5
+      uses: hashicorp/setup-terraform@v1
+      with:
+        terraform_version: 1.9.5
+
+    - name: Terraform Init
+      run: terraform init
+      working-directory: ./terraform
+
+    - name: Terraform Apply
+      run: terraform apply -auto-approve -var "image_tag=${{ env.IMAGE_TAG }}"
+      working-directory: ./terraform
+
     - name: Create .env file
       run: |
         echo "NODE_ENV=production" >> .env
         echo "ANOTHER_ENV_VAR=${{ secrets.ANOTHER_ENV_VAR }}" >> .env
-        # Adicione mais variáveis conforme necessário
         echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> .env
         echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" >> .env
 
@@ -50,19 +62,6 @@ jobs:
     - name: Push Docker image to ECR
       run: |
         docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
-
-    - name: Set up Terraform v1.9.5
-      uses: hashicorp/setup-terraform@v1
-      with:
-        terraform_version: 1.9.5
-
-    - name: Terraform Init
-      run: terraform init
-      working-directory: ./infra
-
-    - name: Terraform Apply
-      run: terraform apply -auto-approve -var "image_tag=${{ env.IMAGE_TAG }}"
-      working-directory: ./infra
 
     - name: Deploy to ECS
       run: |
