--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,40 @@
-# vi docker-compose.yml
-version: '3.3'
+version: '3.8'
+
 services:
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - '3333:3333'
+    environment:
+      NODE_ENV: production
+      MONGO_URI: mongodb://mongo:27017/mydatabase
+      JWT_ACCESS_SECRET: sua_chave_secreta_de_acesso
+      JWT_REFRESH_SECRET: sua_chave_secreta_de_refresh
+    volumes:
+      - .:/usr/src/app
+    depends_on:
+      - mongo
+    networks:
+      - app-network
+
   mongo:
+    image: mongo:6.0
+    container_name: mongo
     ports:
       - '27017:27017'
-    container_name: medcof-mongo
-    restart: always
-    logging:
-      options:
-        max-size: 1g
+    volumes:
+      - mongo-data:/data/db
     environment:
-      - MONGO_INITDB_ROOT_USERNAME=admin
-      - MONGO_INITDB_ROOT_PASSWORD=admin
-    image: mongo
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
+    networks:
+      - app-network
+
+volumes:
+  mongo-data:
+
+networks:
+  app-network:
+    driver: bridge
