--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     ports:
       - '3333:3333'
     environment:
-      NODE_ENV: production
+      NODE_ENV: dev
       MONGO_URI: mongodb://mongo:27017/mydatabase
       JWT_ACCESS_SECRET: sua_chave_secreta_de_acesso
       JWT_REFRESH_SECRET: sua_chave_secreta_de_refresh
@@ -16,8 +16,6 @@ services:
       - .:/usr/src/app
     depends_on:
       - mongo
-    networks:
-      - app-network
 
   mongo:
     image: mongo:6.0
@@ -29,12 +27,6 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
-    networks:
-      - app-network
 
 volumes:
   mongo-data:
-
-networks:
-  app-network:
-    driver: bridge
